# spotifyify

./: .gitignore  README.md  manifest.yml  spotifyify.cabal
docs/: callback.html
src/: Main.hs
src/Spotifyify/: API.hs  Auth.hs  Import.hs  Log.hs  Manifest.hs
