name:                spotifyify
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/spotifyify#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable spotifyify
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Spotifyify.Auth,
                       Spotifyify.Manifest,
                       Spotifyify.Log,
                       Spotifyify.API,
                       Spotifyify.Import
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text,
                       bytestring,
                       utf8-string,
                       containers,
                       filepath,
                       path,
                       path-io,
                       optparse-applicative,
                       yaml,
                       aeson,
                       http-client,
                       http-client-tls,
                       http-conduit,
                       hoauth2,
                       uri-bytestring,
                       open-browser
